--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,7 @@
 	--color-secondary-light: #f0f0f0;
 
 	--color-primary-cont: #002d3d;
+	--color-secondary-cont: #004d6f;
 }
 
 body {
@@ -45,7 +46,7 @@ p {
 	@apply text-gray-700 dark:text-gray-300;
 }
 button {
-	@apply rounded bg-blue-500 px-4 py-2 font-semibold text-white hover:bg-blue-600 dark:bg-blue-400 dark:hover:bg-blue-500;
+	@apply rounded bg-secondary-cont px-4 py-2 font-semibold text-white hover:bg-secondary-cont dark:bg-secondary-cont dark:hover:bg-primary-cont;
 }
 a {
 	@apply text-blue-600 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-500;
