--- a/src/app.css
+++ b/src/app.css
@@ -46,7 +46,7 @@ p {
 	@apply text-gray-700 dark:text-gray-300;
 }
 button {
-	@apply rounded bg-secondary-cont px-4 py-2 font-semibold text-white hover:bg-secondary-cont dark:bg-secondary-cont dark:hover:bg-primary-cont;
+	@apply bg-secondary-cont hover:bg-secondary-cont dark:bg-secondary-cont dark:hover:bg-primary-cont rounded px-4 py-2 font-semibold text-white;
 }
 a {
 	@apply text-blue-600 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-500;
