--- a/src/app.css
+++ b/src/app.css
@@ -8,8 +8,8 @@
 
 	--color-logo: #75feff;
 
-	--color-primary-dark: #111211;
-	--color-secondary-dark: #000000;
+	--color-primary-dark: #000000;
+	--color-secondary-dark: #111211;
 
 	--color-primary-light: #ffffff;
 	--color-secondary-light: #f0f0f0;
@@ -19,11 +19,11 @@
 }
 
 body {
-	@apply font-roboto bg-primary-light text-primary-t-light dark:bg-primary-dark dark:text-primary-t-dark;
+	@apply font-roboto bg-primary-light text-primary-t-light dark:bg-secondary-dark dark:text-primary-t-dark;
 }
 
 input:not([type='submit']) {
-	@apply rounded-md border border-gray-300 p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none dark:border-gray-600 dark:focus:ring-blue-400;
+	@apply rounded-md border border-gray-300 p-2 focus:ring-2 focus:ring-blue-500 focus:outline-none dark:border-gray-600 dark:focus:ring-blue-400 transition-colors;
 }
 
 h1,
@@ -45,19 +45,19 @@ h3 {
 p {
 	@apply text-gray-700 dark:text-gray-300;
 }
+
 button {
-	@apply bg-secondary-cont hover:bg-secondary-cont dark:bg-secondary-cont dark:hover:bg-primary-cont rounded px-4 py-2 font-semibold text-white;
+	@apply bg-primary-cont hover:bg-secondary-cont dark:bg-primary-cont dark:hover:bg-primary-cont rounded px-4 py-2 font-semibold text-white;
 }
+
 a {
 	@apply text-blue-600 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-500;
 }
+
 ul {
 	@apply list-disc pl-5 text-gray-700 dark:text-gray-300;
 }
+
 li {
 	@apply mb-2;
-}
-
-.box {
-	box-shadow: var(--color-primary-cont) 0 0 20px 2px;
 }
